# SFML-app

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
include/: handle_key_events.h  utils.h
src/: handle_key_events.cpp  main.cpp  utils.cpp
